objects/Apttus__WizardStepRuntime__c.object
<CustomObject>
    <description>A runtime instance of a wizard step design.</description>
    <fields>
        <fullName>Apttus__NextPage__c</fullName>
        <description>Identifies the next page if its not a Wizard Step (URL, SUBMIT, ACKNOWLEDGEMENT)</description>
        <inlineHelpText>Identifies the next page if its not a Wizard Step (URL, SUBMIT, ACKNOWLEDGEMENT)</inlineHelpText>
        <label>Next Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__NextWizardRuntimeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not supported yet. Identifies the next wizard runtime during navigation</description>
        <inlineHelpText>Not supported yet. Identifies the next wizard runtime during navigation</inlineHelpText>
        <label>Next Wizard Runtime</label>
        <referenceTo>Apttus__WizardRuntime__c</referenceTo>
        <relationshipName>WizardStepRuntime2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__NextWizardStepRuntimeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to wizard step runtime</description>
        <inlineHelpText>Look up to wizard step runtime</inlineHelpText>
        <label>Next Wizard Step Runtime</label>
        <referenceTo>Apttus__WizardStepRuntime__c</referenceTo>
        <relationshipName>WizardStepRuntime1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardRuntimeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference/Lookup to wizard runtime this step belongs to</description>
        <inlineHelpText>Reference/Lookup to wizard runtime this step belongs to</inlineHelpText>
        <label>Wizard Runtime</label>
        <referenceTo>Apttus__WizardRuntime__c</referenceTo>
        <relationshipName>WizardStepRuntime3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference/Lookup to Wizard Step design from which this runtime step is instantiated</description>
        <inlineHelpText>Reference/Lookup to Wizard Step design from which this runtime step is instantiated</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep__c</referenceTo>
        <relationshipName>WizardStepRuntime</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Step Runtime (Deprecated)</label>
    <nameField>
        <label>Wizard Step Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Step Runtime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>